--- a/trunk/LaTeX/preamble.tex
+++ b/trunk/LaTeX/preamble.tex
@@ -73,7 +73,7 @@ stringstyle=\color[rgb]{0.627,0.126,0.941}
 \let\newfloat\relax 	% Memoir har allerede defineret denne, men det gør float pakken også
 \usepackage{float}
 %\usepackage[footnote,draft,danish,silent,nomargin]{fixme}	% Indsæt rettelser og lignende med \fixme{...} Med final i stedet for draft, udløses en error for hver fixme, der ikke er slettet, når rapporten bygges.
-\usepackage[draft]{fixme}
+\usepackage[draft,silent]{fixme}
 
 %%%% CUSTOM SETTINGS %%%%
 
