--- a/LaTeX/Undervejs/first test.tex
+++ b/LaTeX/Undervejs/first test.tex
@@ -11,4 +11,4 @@ Three tests of the program have been made on three different test persons. The m
 
 After the first test some labels in the program was changed to help the understanding of the use of the program. The instructions in the program were also changed to better describe more of the program. The first test person did not have problems at all in packing the suitcases but stated that he/she did not find the program useful. He/she suggested adding a function making the program able to take into account if an item is bendable.
 
-The second test got interrupted because of some problems with loading one of the lists which caused a big problem in the program. The test was retaken another day after the problem was fixed. Before the 2nd test we made some changes in the instructions, saving functions, bottom of suitcase, added some new buttons on the forms; manage suitcase, manage items, add item, and add suitcase.
+The second test got interrupted because of some problems with loading one of the lists which caused a big problem in the program. The test was retaken another day after the problem was fixed. Before the 2nd test we made some changes in the instructions, saving functions, bottom of suitcase, added some new buttons on the forms; manage suitcase, manage items, add item, and add suitcase. After we made those changes we began test 2.
