--- a/trunk/LaTeX/Undervejs/sketchdescription.tex
+++ b/trunk/LaTeX/Undervejs/sketchdescription.tex
@@ -1,4 +1,4 @@
-\section{Sketch}
+\section{Sketches before programming of GUI}
 
 Designing the program required some sketches and our first sketch looked like this:
 It shows some boxes where the user must type the dimensions of the suitcase, so the program knows how much space it has to deal with, and the measurement is the metric unit system.
