--- a/LaTeX/Undervejs/Colour giver.tex
+++ b/LaTeX/Undervejs/Colour giver.tex
@@ -1,12 +1,15 @@
 \section{Colour giver}
 this function give each item a colour and make sure that items that are next to each other do not get the same colour. This function have 4 steps to completed it task.
 
-The first step is to add all point that the item have around into a list and this is done for all items. To do this a loop control the item there is made point for. Then there is 3 "for" loop that control the x, y and z value that is given for each point in the last "for" loop where the point is add to a temporary item where there is 3 integer list (x, y and z). Then the temporary item is added to the main list of items. and the temporary item is reset after a new item is made point for so the item do not get the previous points into them.
+The first step is to add all point that the item have around into a list and this is done for all items. To do this a loop control the item there is made point for. Then there is 3 "for" loop that control the x, y and z value that is given for each point in the last "for" loop( those loop and the items loops can see on listing under this test)where the point is add to a temporary item where there is 3 integer list (x, y and z).
+\fxfatal{Colour_giver_listing1}
+Since all point is gone through there is a "if" that controls if the point is around the item(this "if" statement can be seen under this test) it work by checking if one of the coordinates (x, y or z) is either at it start point or at the maximum length and the rest of it check if the rest of coordinates is around the item. Then the temporary item is added to the main list of items.  The temporary item is reset just before a new item is made point for so the item do not get the previous points into them.
+\fxfatal{Colour_giver_listing2}
 
-Next step is check if points from to items are at the same. thereby determine if they are located next to each other. If they are the item number will be save in a list that is call neighbour. This part work by 4 "for" loop's where the first 2 work with the items. The last 2 work with the points that are in the items that are work with. but it will only run these loop if the items are in the same suitcase. Here it will check if where is some point that is the same thereby find out if the 2 items are next to each other. If they are next to each other it will save the item number into a list in the other item this list this is done for both items that are check.
+Next step is check if points from to items are at the same. thereby determine if they are located next to each other if they are, the item number will be save in a list that is call neighbour. This step work by 4 "for" loop's where the first one keeps track with the certain items that is being check for neighbour, the second keeps track  the certain item that is check if it is a neighbour to the first one this function. The last 2 work with the points that are in the items that are work with. but it will only run these loop if the items are in the same suitcase(with can be seen by the "if" sentence that are between the 2 first for loop an the 2 last "for" loops). Here it will check if where is some point that is the same thereby find out if the 2 items are next to each other. If they are next to each other it will save the item number into a list in the other item this list this is done for both items that are check.\fxfatal{Colour_giver_listing3}
 
 
 thereafter the list "neighbour" are going through to remove all the duplicates and themselves from the list. This work with a one "for" loop that keeps control of with item that are working with and right after the loop the neighbour list is being sorted. Then there is a "while" loop that go through all the neighbour (item that are next to it) and check if itself is in it and remove. It will also check of the number after the current is the same if it is it will remove one of them.
 
 
-the last step it going through the item list and checking with colour can be given to each item. In this part the colours are numbers, where number 0 is the first colour there. first is a for loop that control with item that are checked. before the neighbour are check the colour for the item start at number 0.Then there is a "while" loop that go through all the items neighbour and check if the colour is the same and if there is the colour is the same. Item colour number is increased by 1. When the neighbour list is finis the colour is save in the item, and the next item is check.
+the last step that is taken is to go through the item list and give colour to each item. In this part the colours are numbers, where number 0 is the standard colour. first is a "for" loop that control with item that are checked. before the neighbour are check the colour for the item start at number 0.Then there is a "while" loop that go through all the items neighbour and check if the colour is the same and if there is the colour is the same. Item colour number is increased by 1. When the neighbour list is finis the colour is save in the item, and the next item is check.
