--- a/trunk/LaTeX/Undervejs/GUI Description.tex
+++ b/trunk/LaTeX/Undervejs/GUI Description.tex
@@ -1,3 +1,3 @@
 \section{GUI Description}
 
-Before the GUI was programmed, sketches of how the program should look like were made, and it did not quite end up as the sketches look like. This happened because the sketches had not any 'base form'. Practically the sketches were made without thought of how it would be to program. 
+Before the GUI was programmed, sketches of how the program should look like were made, but it did not quite end up as the sketches look like. 
