--- a/trunk/LaTeX/Klar til at blive rettet af andre/Colour giver.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Colour giver.tex
@@ -1,12 +1,13 @@
 \section{Colour giver}
-this function give each item a colour and make sure that items that are next to each other do not get the same colour. This function have 4 steps to completed it task.
+This function gives each item a colour and make sure that items that are next to each other do not get the same colour. This function have four steps to complete to finish its task.
 
-The first step is to add all point that the item have around into a list and this is done for all items. To do this a loop control the item there is made point for. Then there is 3 "for" loop that control the x, y and z value that is given for each point in the last "for" loop( those loop and the items loops can see on listing under this test)where the point is add to a temporary item where there is 3 integer list (x, y and z).
-\fxfatal{Colour_giver_listing1}
-Since all point is gone through there is a "if" that controls if the point is around the item(this "if" statement can be seen under this test) it work by checking if one of the coordinates (x, y or z) is either at it start point or at the maximum length and the rest of it check if the rest of coordinates is around the item. Then the temporary item is added to the main list of items.  The temporary item is reset just before a new item is made point for so the item do not get the previous points into them.
-\fxfatal{Colour_giver_listing2}
+The first step is to add all the item's points into a list, this is done for all items. First off, a "for" loop checks which item is the current. Then there are three "for" loops that checks the x, y and z values that are given for each point. In the last "for" loop the three integers x, y and z are together added to a list. Each list outlines the sides of their respective object. 
+\fxfatal{ColourGiverListing1}
 
-Next step is check if points from to items are at the same. thereby determine if they are located next to each other if they are, the item number will be save in a list that is call neighbour. This step work by 4 "for" loop's where the first one keeps track with the certain items that is being check for neighbour, the second keeps track  the certain item that is check if it is a neighbour to the first one this function. The last 2 work with the points that are in the items that are work with. but it will only run these loop if the items are in the same suitcase(with can be seen by the "if" sentence that are between the 2 first for loop an the 2 last "for" loops). Here it will check if where is some point that is the same thereby find out if the 2 items are next to each other. If they are next to each other it will save the item number into a list in the other item this list this is done for both items that are check.\fxfatal{Colour_giver_listing3}
+Through two "for" loops it is checked whether or not the two given items are in the same container and if they are close to each other. This is done by an "if" statement that controls if the point is around the item(this "if" statement can be seen under this test) it works by checking if one of the coordinates (x, y or z) is either at the others start point or at the maximum length and the rest of it check if the rest of the coordinates are around the item. Then the temporary item is added to the main list of items.  The temporary item is reset just before a new item is made so the item do not get the previous points into them.
+\fxfatal{ColourGiverListing2}
+
+Next step is check if points from two items are at the same. thereby determine if they are located next to each other if they are, the item number will be save in a list that is call neighbour. This step work by 4 "for" loop's where the first one keeps track with the certain items that is being check for neighbour, the second keeps track  the certain item that is check if it is a neighbour to the first one this function. The last 2 work with the points that are in the items that are work with. but it will only run these loop if the items are in the same suitcase(with can be seen by the "if" sentence that are between the 2 first for loop an the 2 last "for" loops). Here it will check if where is some point that is the same thereby find out if the 2 items are next to each other. If they are next to each other it will save the item number into a list in the other item this list this is done for both items that are check.\fxfatal{ColourGiverListing3}
 
 
 thereafter the list "neighbour" are going through to remove all the duplicates and themselves from the list. This work with a one "for" loop that keeps control of with item that are working with and right after the loop the neighbour list is being sorted. Then there is a "while" loop that go through all the neighbour (item that are next to it) and check if itself is in it and remove. It will also check of the number after the current is the same if it is it will remove one of them.
