--- a/trunk/LaTeX/Undervejs/GUI Description.tex
+++ b/trunk/LaTeX/Undervejs/GUI Description.tex
@@ -1,3 +1,13 @@
 \section{GUI Description}
 
-Before the GUI was programmed, sketches of how the program should look like were made, but it did not quite end up as the sketches look like. 
+Before the GUI was programmed, sketches of how the program should look like were made, and it did not quite end up as the sketches look like. This happened because the sketches had not any 'base form'. Practically the sketches were made without thought of how it would be to program. 
+
+\subsection{3D viewer}
+The 3D viewer shows how the program have packed the different items in the suitcases.
+
+\figur{}{..\..\GUI\Screenshots\frm3DViewer.png}
+
+This is the first thing the user will see when the user has started packing. It shows how the items are placed in the suitcase.
+The image can be dragged, moved, and zoomed with the mouse as seen below. 
+
+\figur{}{..\..\GUI\Screenshots\frm3DViewer2.png}
