--- a/trunk/LaTeX/preamble.tex
+++ b/trunk/LaTeX/preamble.tex
@@ -186,6 +186,10 @@ stringstyle=\color[rgb]{0.627,0.126,0.941}
 		\end{figure} 
 }
 
+\newcommand{\kode}[3]{
+		\lstinputlisting[caption = #1, label=list:#2]{#3}
+}
+
 %%%% ORDDELING %%%%
 
 \hyphenation{hvad hvem hvor}
