--- a/trunk/Personlige mapper/Chr/test.tex
+++ b/trunk/Personlige mapper/Chr/test.tex
@@ -1,8 +1,8 @@
-\input{../../LaTeX/preamble}
 
+\input{../../LaTeX/preamble}
 \begin{document}
 
 \input{ThePackingAlgorithm.tex}
-
+\kode{hejcap}{hefdas}{ColourGiverListing1.txt}
 
 \end{document}
