--- a/LaTeX/Undervejs/GUI Description.tex
+++ b/LaTeX/Undervejs/GUI Description.tex
@@ -8,6 +8,12 @@ The 3D viewer shows how the program have packed the different items in the suitc
 \figur{}{..\..\GUI\Screenshots\frm3DViewer.png}
 
 This is the first thing the user will see when the user has started packing. It shows how the items are placed in the suitcase.
-The image can be dragged, moved, and zoomed with the mouse as seen below. 
+The image can be dragged, moved, and zoomed with the mouse, as seen below. When the user clicks on an item in the list on the right side, the marked item will be highlighted in the image. Below the list are the xyz-points to see where the item's supposed to be placed, and the current suitcase's weight. 
 
 \figur{}{..\..\GUI\Screenshots\frm3DViewer2.png}
+
+On the left side of the window are two buttons, zoom in and zoom out. There is a check box on the lower left side called "Zoom limit". It sets limit for how close and how far the user can zoom the image. The buttons are made if the user has not got a mouse with a scrolling wheel or is on laptop. The track bar on the left is a tool to adjust the speed when the user rotates the image. The reset button resets the track bar. Below the reset button is a drop-down list with the suitcases the user has packed items into.
+
+The reason why it looks like it does is because it gives a good overview with the item list on the right, the 3D-image in the middle, and the image options (zoom in, zoom out, reset etc.) on the left.
+
+In the 3D-image a small box in point (0;0;0) is made to show where it is, so the user easier can navigate through the items.
