--- a/trunk/LaTeX/BibTeX/sources.bib
+++ b/trunk/LaTeX/BibTeX/sources.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.7.
+% This file was created with JabRef 2.7.2.
 % Encoding: Cp1252
 
 @MISC{idianrules,
@@ -158,6 +158,16 @@
   owner = {Aleksander},
   timestamp = {2012.02.22},
   url = {http://solvingmaze.com/demo}
+}
+
+@MISC{tspsource,
+  author = {Georgia Institute of Technology},
+  title = {Traveling Salesman Problem: The Problem},
+  month = {January},
+  year = {2007},
+  owner = {lewindows},
+  timestamp = {2012.04.27},
+  url = {http://www.tsp.gatech.edu/problem/index.html}
 }
 
 @MISC{packingpro,
