--- a/LaTeX/Mettes test.tex
+++ b/LaTeX/Mettes test.tex
@@ -7,8 +7,8 @@ Han må flytte på allerede anbragte ting for at placere andre.
 Testperson 2:
 Han er allerede træt af at tilføje ting efter 4 ting.
 Måler også udvendige mål på kuffert
-Ønsker bedre beskrivelse hvad der er op og ned i kufferten.
-Han havde problemer med at mange ting skulle på højkant og at de skulle pakkes først så intet kunne holde det.
+Ønsker bedre beskrivelse hvad der er op og ned i kufferten. //rettet
+Han havde problemer med at mange ting skulle på højkant og at de skulle pakkes først så intet kunne holde det. //rettet - algo optimeret
 Også han tvinges til at flytte ting for at anbringe andre.
 Forstår heller ikke "#".
 Vi skal have forklaret i instruktionerne det omkring at tilføje flere ting på samme tid.
