--- a/LaTeX/Klar til at blive rettet af andre/Colour giver.tex
+++ b/LaTeX/Klar til at blive rettet af andre/Colour giver.tex
@@ -1,16 +1,14 @@
-\section{Colour giver}
-This function gives each item a colour and make sure that items that are next to each other do not get the same colour. This function have four steps to complete to finish its task.
-
-The first step is to add all the item's points into a list, this is done for all items. First off, a "for" loop checks which item is the current. Then there are three "for" loops that checks the x, y and z values that are given for each point. In the last "for" loop the three integers x, y and z are together added to a list. Each list outlines the sides of their respective object. 
-\kode{the 4 "for" loops that crontrol the item and the x, y, z value that make the point for the items}{ColourGiverListing1}{ColourGiverListing1.txt}
-
-Through two "for" loops it is checked whether or not the two given items are in the same container and if they are close to each other. This is done by an "if" statement that controls if the point is around the item(this "if" statement can be seen under this test) it works by checking if one of the coordinates (x, y or z) is either at the others start point or at the maximum length and the rest of it check if the rest of the coordinates are around the item. Then the temporary item is added to the main list of items.  The temporary item is reset just before a new item is made so the item do not get the previous points into them.
-%\kode{here can there be seen the "if sentence that see if there is 2 point is the same"}{ColourGiverListing2}{ColourGiverListing2.txt}
-
-Next step is check if points from two items are at the same. thereby determine if they are located next to each other if they are, the item number will be save in a list that is call neighbour. This step work by 4 "for" loop's where the first one keeps track with the certain items that is being check for neighbour, the second keeps track  the certain item that is check if it is a neighbour to the first one this function. The last 2 work with the points that are in the items that are work with. but it will only run these loop if the items are in the same suitcase(with can be seen by the "if" sentence that are between the 2 first for loop an the 2 last "for" loops). Here it will check if where is some point that is the same thereby find out if the 2 items are next to each other. If they are next to each other it will save the item number into a list in the other item this list this is done for both items that are check.
-
-
-thereafter the list "neighbour" are going through to remove all the duplicates and themselves from the list. This work with a one "for" loop that keeps control of with item that are working with and right after the loop the neighbour list is being sorted. Then there is a "while" loop that go through all the neighbour (item that are next to it) and check if itself is in it and remove. It will also check of the number after the current is the same if it is it will remove one of them.
-
-
-the last step that is taken is to go through the item list and give colour to each item. In this part the colours are numbers, where number 0 is the standard colour. first is a "for" loop that control with item that are checked. before the neighbour are check the colour for the item start at number 0.Then there is a "while" loop that go through all the items neighbour and check if the colour is the same and if there is the colour is the same. Item colour number is increased by 1. When the neighbour list is finis the colour is save in the item, and the next item is check.
+\section{Color giver}
+This function gives each item a color and make sure that items that are next to each other do not get the same color. The function have four steps to complete to finish this task.\\
+\\
+The first step is to add all the item's points into a list, this is done for all items. First off, a "for" loop checks which item is the current. Then there are three "for" loops that checks the x, y and z values that are given for each point. In the last "for" loop the three integers x, y and z are added to a list. Each of these lists outlines the sides of their respective object.\\ 
+\kode{the 4 "for" loops that controls the item and the x, y, z value that make the point for the items}{colorGiverListing1}{colorGiverListing1.txt}
+\\
+Through two "for" loops it is checked whether or not the two given items are in the same container and if they are close to each other. This is done by an "if" statement that checks if the point is around the item(this "if" statement can be seen under this test) it works by checking if one of the coordinates (x, y or z) is either at the others start point or at the maximum length and the rest of it check if the rest of the coordinates are around the item. Then the temporary item is added to the main list of items.  The temporary item is reset just before a new item is made so the item do not get the previous points into them.\\
+%\kode{here can there be seen the "if sentence that see if there is 2 point is the same"}{colorGiverListing2}{colorGiverListing2.txt}
+\\
+Next step is to check if points from two items are the same. Thereby determine if they are located next to each other, if they are, the item number will be saved in a list that is called neighbour. This step works by 4 "for" loops where the first one keeps track of the current item that is being checked for neighbours, the second keeps track of the item that is being checked if it is a neighbour to the first one. The last 2 work with the points that are in the items that are being worked with. But it will only run these loop if the items are in the same suitcase(Which can be seen by the "if" sentence that are between the 2 first and the 2 last "for" loops). If they are next to each other it will save the item number into a list in the other item this list is done for both items that are checked.\\
+\\
+Thereafter the list "neighbour" are gone through to remove all the duplicates of themselves from the list. This work with one "for" loop that keeps track of which item that are being worked with and when the loop is done the neighbour list is sorted. Then there is a "while" loop that go through all the neighbours(Items that are next to it) and check if the item itself is in it and remove it. It will also check if the number after the current is the same, if it is it will remove one of them.\\
+\\
+The last step taken is to go through the item list and give a color to each item. In this part the colors are numbers, where number 0 is the standard color. First is a "for" loop that that sets the current item. Before the current item is given a number based on its neighbours, its value is set to 0. Then there is a "while" loop that go through all the item's neighbours and check if the color is the same. If they are the same then the item's color number is increased by 1. When the neighbour list is finished the color is saved in the item, and the next item is checked.
