--- a/LaTeX/Undervejs/first test.tex
+++ b/LaTeX/Undervejs/first test.tex
@@ -6,9 +6,15 @@ It is important when making a questionnaire that it is structured correctly and 
 
 So there will be made an interview based on a questionnaire after the test person has tested the program with focus on what can be improved on the program.
 
-\section{First Test of the Program}
-Three tests of the program have been made on three different test persons. The main idea was to see if the program had any bugs and to get some suggestions to what could be improved and if anything was missing. The test persons were first given some instructions on what they were supposed to do in the test and were afterwards asked to read the instructions in the program. The test persons were to load two lists in the program and then add some missing items after having measured the item's weight and dimensions. Then afterwards they were asked to pack two suitcases. When the test person was done packing an interview was made. Two group members were present at the testing. One was sitting documenting everything and afterwards interviewing the test person, while the other sat behind the test person to see what mistakes the test person made.
+\section{The First Round of Tests of the Program}
+Two tests of the program have been made on two different test persons in the first round of tests. The main idea was to see if the program had any bugs and to get some suggestions to what could be improved and if anything was missing. The test persons were first given some instructions on what they were supposed to do in the test and were afterwards asked to read the instructions in the program. The test persons were to load two lists in the program and then add some missing items after having measured the item's weight and dimensions. Then afterwards they were asked to pack two suitcases. When the test persons were done packing an interview was made. Two group members were present at the testing. One was sitting documenting everything and afterwards interviewing the test person, while the other sat behind the test person to see what mistakes the test person made.
 
 After the first test some labels in the program was changed to help the understanding of the use of the program. The instructions in the program were also changed to better describe more of the program. The first test person did not have problems at all in packing the suitcases but stated that he/she did not find the program useful. He/she suggested adding a function making the program able to take into account if an item is bendable.
 
-The second test got interrupted because of some problems with loading one of the lists which caused a big problem in the program. The test was retaken another day after the problem was fixed. Before the 2nd test we made some changes in the instructions, saving functions, bottom of suitcase, added some new buttons on the forms; manage suitcase, manage items, add item, and add suitcase. After we made those changes we began test 2.
+The second test got interrupted because of some problems with loading one of the lists which caused a breakdown of the program. The test was retaken another day after the problem was fixed. Before the 2nd test we made some changes in the instructions, saving functions, bottom of suitcase, added some new buttons on the forms; manage suitcase, manage items, add item, and add suitcase. After we made those changes we began test 2.
+
+The second attempt on the second test was made a short time after the first attempt. This time there was no technical problems with the program, and the test was made without more serious problems. After the test the instructions was changed again to better describe some features in the program and also describe how to rotate and drag the 3D model in the 3D-viewer. Another thing that was changed was that you now have to write the weight limit in kg instead of gram. The mistake with the program asking if you want to save the lists after you have saved them by using the button was also fixed after the test. The "Reset"-button  was removed from the main window. The list in the 3D-viewer now sort the items so the ones on the bottom is in the top of the list now. The last thing that was changed was that an image of a suitcase was added in the "Manage Suitcases"-window and a picture of several items was added to the "Manage Items"-window.
+
+\section{The Second Round of Tests of the Program}
+
+The second round of tests was made a week after the last one. 
