--- a/LaTeX/Klar til at blive rettet af andre/function_draw_cubes - Kasper.tex
+++ b/LaTeX/Klar til at blive rettet af andre/function_draw_cubes - Kasper.tex
@@ -1,6 +1,6 @@
 \section{Function to draw cubes}
-The function called DrawSomething is the function which basically converts dimensions and coordinates into the vectors that are to be drawn.
-DrawSomething takes 11 input parameters. Put short these inputs are the dimensions and coordinates of the cube to be drawn represented as floats. Next the function takes 3 integers which are: The number of suitcase the item to be drawn lies in, the factor of zoom that should be applied to the item, and the index of the array of polygons that has currently been reached. Lastly the function takes a Vector and a Pen as input.
+The function called "DrawSomething" is the function which basically converts dimensions and coordinates into the vectors that are to be drawn.
+DrawSomething takes 11 input parameters. Simply put, these inputs are the dimensions and coordinates of the cube to be drawn represented as floats. Next the function takes 3 integers which are: The number of the suitcase the item to be drawn lies in, the factor of zoom that should be applied to the item, and the index of the array of polygons that has currently been reached. Lastly the function takes a Vector and a Pen as input.
 
 The Pen represents the color and width of the cube to be drawn. For example the function could draw a red cube with a width of each line of 5 pixels. The Vector is essentially a dummy-vector. The polygon class requires a vector in its constructor, but the Vector is set to zero in the class.
 
