--- a/LaTeX/Undervejs/first test.tex
+++ b/LaTeX/Undervejs/first test.tex
@@ -17,4 +17,4 @@ The second attempt on the second test was made a short time after the first atte
 
 \section{The Second Round of Tests of the Program}
 
-The second round of tests was made a week after the last one. 
+The second round of tests was made a week after the second test. The test went without any technological problems and was an success. After the two tests the following was changed 
